# midi-drums

./: README.md  pyproject.toml  record_cam.py  run.py  sync_learning.py
midi_drums/models/: dataset.py  frame_memory.py
midi_drums/video/: source.py
videolabel/: pyproject.toml
